--- a/css/nutrition-label.css
+++ b/css/nutrition-label.css
@@ -48,9 +48,6 @@
 
 
 
-
-
-
 /* TEXT *********/
 
 .nutrition-label {
@@ -89,4 +86,15 @@
     width:16px;
     height:16px;
     fill:var(--gray-800);
+}
+
+
+
+
+/* FULL ************/
+.drawer.full .nutrition-label {
+    padding:0px;
+    background-color:transparent;
+    border:none;
+    border-radius:0;
 }
