--- a/css/cards.css
+++ b/css/cards.css
@@ -7,7 +7,6 @@
     border: 1px solid var(--gray-300);
     border-radius: var(--border-radius);
     transition: all 300ms;
-    overflow: hidden;
     cursor:pointer;
     user-select: none;
 }
@@ -46,12 +45,32 @@
     padding:8px;
 }
 
+
+
+/* OTHER COMPONENT ADJUSTEMENTS ********************************/
+.card .badge {
+    margin-bottom:24px;
+}
+.card .accordion:last-child {
+    border-bottom:none;
+    margin-bottom:-24px;
+}
+
+.card.horizontal .accordion:last-child {
+    margin-bottom:-16px;
+}
+
+.card .accordion.framed:last-child {
+    border-bottom:none;
+    margin-bottom:0px;
+}
+
+
 /* CONTENT CARDS *****************************/
 .card.content {
     display:grid;
     gap:32px;
 }
-
 
 
 
@@ -524,7 +543,12 @@
 
 
 /* PLAN CARDS *******************************/
-
+.card.plan {
+    display:flex;
+    flex-direction: column;
+    gap:24px;
+    overflow: hidden;
+}
 .expand {
     overflow:hidden;
     transition: height 500ms;
@@ -534,7 +558,6 @@
     display:grid;
     grid-template-columns: 1fr auto;
     column-gap:24px;
-    margin-bottom:24px;
 }
 
 .card.plan .head .price {
@@ -578,47 +601,172 @@
 }
 
 
+/* HORIZONTAL PLAN CARDS *****************************/
+.card.content.horizontal {
+    padding:24px 0px 48px;
+}
+
+.card.content.horizontal {
+    padding:24px 0px;
+}
+
+.card.content.horizontal .copy-block {
+    padding:0 24px;
+}
+
+.horizontal #plans-cards {
+    overflow-x:hidden;
+    margin-top:-24px;
+    margin-bottom:-24px;
+}
+
+.plan.horizontal {
+    min-width:280px;
+    padding:16px;
+}
+
+.plan.horizontal .head {
+    grid-template-columns: 1fr;
+}
+
+.plan.horizontal .head h3 {
+    margin-bottom:24px;
+}
+
+.plan.horizontal .badge {
+    margin-bottom:16px;
+    display:none;
+}
+
+/*.plan.horizontal #acc-nl .content {
+    transition: 1000ms;
+}*/
+
+/* CAROUSEL */
+#plans-cards {
+    position:relative;
+}
+#plans-carousel {
+    position: relative;
+    padding-bottom:72px;
+}
+
+#plans-carousel.expanded {
+    padding-bottom:8px;
+}
+
+#plans-carousel #cards {
+    overflow-x:scroll;
+    scroll-behavior: smooth;
+    display:flex;
+    gap:24px;
+    padding:24px 24px 16px 24px;
+}
+
+#plans-carousel #cards::-webkit-scrollbar {
+    display: none;
+  }
+
+#pagination {
+    position:absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+    pointer-events: none;
+}
+#pagination.extended {
+    height:100%;
+}
+
+#pagination #nav-container {
+    position:sticky;
+    top:80%;
+    left:0px;
+    display:flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding:16px 0 24px;
+}
+
+#pagination #nav-bar {
+    display:inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap:32px;
+    bottom:0px;
+    background-color:#fff;
+    padding:8px;
+    border-radius:100px;
+    margin:auto;
+    pointer-events: all;
+}
+
+#pagination.extended #nav-bar {
+    /*box-shadow: 2px 2px 6px #3333;*/
+}
+
+#pagination .pag-button {
+    width:32px;
+    height:32px;
+    transition:500ms;
+    cursor: pointer;
+}
+
+#pagination .pag-button.inactive {
+    pointer-events: none;
+}
+
+#pagination .pag-button svg {
+    fill: var(--cobalt-600);
+}
+
+#pagination .pag-button.inactive svg {
+    fill: var(--gray-300);
+}
+
+#pagination #pag-bubbles {
+    display:flex;
+    gap:16px;
+}
+
+#pagination .pag-bubble {
+    position: relative;
+    width:16px;
+    height:16px;
+    border-radius: 100%;
+    border:1px solid transparent;
+    transition:500ms;
+}
+
+#pagination .pag-bubble.active {
+    border:1px solid var(--gray-600);
+}
+#pagination .pag-bubble::after {
+    content:'';
+    position:absolute;
+    top:3px;
+    left:3px;
+    width:8px;
+    height:8px;
+    border-radius: 100%;
+    background-color:var(--gray-400);
+}
+
+
+
+
+
 
 
 /* SPECIAL DEMO CASES **************/
 
-.drawer.scrollable .card.plan  .nutrition-details {
+.card.plan .wrapper.scrollable {
     overflow-y: scroll;
-}
-
-.drawer.scrollable.full .scroll-area {
-    overflow-y: scroll;
-    border-top:1px solid var(--gray-300);
-    padding-top: 24px;
-    padding-right:24px;
+    height:250px;
+    border:1px solid var(--gray-300);
+    background-color:#fff;
+    padding:16px;
     overscroll-behavior: contain;
-}
-
-.drawer.scrollable.full .card.plan .features {
-    border-top:none;
-    padding-top: 0px;
-}
-
-.drawer.scrollable.full .card.plan  .nutrition-details {
-    overflow-y:visible;
-}
-
-.drawer.scrollable.full .scroll-call {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    padding-top:24px;
-    margin-top:24px;
-    gap:8px;
-    border-top:1px solid var(--gray-300);
-}
-
-.drawer.scrollable.full .scroll-call h6 {
-    margin:0;
-}
-.drawer.scrollable.full .scroll-call svg {
-    width:16px;
-    height:16px;
 }
 
 
@@ -630,7 +778,15 @@
     gap:24px;
     position:sticky;
     top:24px;
+    transition: 500ms;
 }
+
+.device-info #full {
+    display:grid;
+    gap:24px;
+    overflow: hidden;
+}
+
 
 .device-info .device-image {
     display: flex;
@@ -638,18 +794,20 @@
 }
 
 .device-info .device-image img {
+    width:100%;
     height:300px;
-}
-
-.device-info .device-image {
-    display: flex;
-    justify-content: center;
+    object-fit:contain;
+    /*transition:500ms;*/
 }
 
 .device-info .selection {
     display:flex;
     justify-content: space-between;
     gap:24px;
+}
+
+.device-info .selection > div:first-child {
+    
 }
 
 .device-info .selection p {
@@ -663,16 +821,108 @@
 }
 
 
+/* COLLAPSIBLE */
 
+.device-info.collapsed #full {
+    display:none;
+}
 
+.device-info #condensed {
+    display:none;
+}
+
+.device-info.collapsed #condensed {
+    display:grid;
+    gap:16px;
+}
+
+.device-info.collapsible {
+    width:508px;
+}
+
+.device-info.collapsible.collapsed {
+    justify-content: right;
+    gap:16px;
+    width:76px;
+    padding:16px 8px 8px;
+}
+
+.device-info .minimize {
+    position:absolute;
+    display:none;
+    top:16px;
+    right:16px;
+    width:24px;
+    height:24px;
+    cursor: pointer;
+}
+
+.device-info.collapsible .minimize {
+    display: block;
+}
+
+.device-info.collapsible.collapsed .minimize {
+    display: none;
+}
+
+/* IMAGE */
+.device-info.collapsed .device-image img {
+    width:100%;
+    height:58px;
+}
+
+/* SELECTIONS */
+.device-info.collapsed #condensed > div {
+    display:grid;
+    gap:8px;
+    padding-top:16px;
+    border-top:1px solid var(--gray-300);
+}
+
+.device-info.collapsed .detail, .device-info.collapsed .offer {
+    width:58px;
+    height:58px;
+}
+
+.device-info.collapsed .icon, .device-info.collapsed .icon {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height:100%;
+    border-radius:16px;
+}
+
+.device-info.collapsed .detail .icon {
+    border:1px solid var(--gray-300);
+}
+
+.device-info.collapsed .detail .icon .color {
+    width:60%;
+    height:60%;
+    background-color:#576856;
+    border-radius:100%;
+}
+
+.device-info.collapsed .detail .icon .capacity {
+    font-size:var(--type-xs);
+    font-weight:700;
+}
+
+.device-info.collapsed .icon svg {
+    width:32px;
+    height:32px;
+    fill:var(--gray-800);
+}
+
+/* OFFERS */
+.device-info.collapsed .offer .icon {
+    background-color:var(--gray-200);
+}
 
 
 
 /* FLIP CARDS *******************************/
-.flip {
-    
-}
-
 .flip .card {
     position:relative;
     transform:rotateY(0deg);
@@ -721,6 +971,15 @@
     #product-grid {
         grid-template-columns: repeat(2,1fr);
         gap:16px;
+    }
+
+    /* COLLAPSIBLE CARD */
+    .device-info.collapsible {
+        width:100%;
+    }
+
+    .device-info.collapsible .minimize {
+        display:none;
     }
 
   }
