--- a/css/main.css
+++ b/css/main.css
@@ -409,6 +409,7 @@ li span {
     content:"Monthy";
     margin-left:8px;
     font-size:0.75em;
+    font-weight:400;
 }
 
 .price .retail::before {
@@ -433,6 +434,7 @@ li span {
     content:"Due today";
     margin-left:8px;
     font-size:0.75em;
+    font-weight:400;
 }
 
 
@@ -615,7 +617,7 @@ input[type=text]{
 /* CUSTOMIZED SCROLLBAR *************************************************/
 /* total width */
 .scrollbar::-webkit-scrollbar {
-    background-color: #fff;
+    background-color: transparent;
     width:10px;
     height:10px;
 }
@@ -643,7 +645,38 @@ input[type=text]{
     display:none;
 }
 
+/* THIN VERSION */
 
+.scrollbar.thin::-webkit-scrollbar {
+    width:6px;
+    height:6px;
+}
+
+.scrollbar.thin::-webkit-scrollbar-track {
+    background-color:var(--gray-300);
+    border:1px solid #fff;
+    border-radius: 3px;
+}
+
+.scrollbar.thin::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(var(--gray-800), var(--gray-600));
+    border:1px solid #fff;
+    border-radius: 3px;
+}
+
+.scrollbar.thin::-webkit-scrollbar-thumb:hover {
+    border:0px solid #fff;
+}
+
+.scrollbar.windowed::-webkit-scrollbar-track {
+    border-radius:0;
+    border:none;
+}
+
+
+.active .scrollbar::-webkit-scrollbar-track {
+    border-color: var(--blue-000);
+}
 
 
 /* HEADER BAR ***********************************/
@@ -1149,29 +1182,31 @@ nav#sub-nav .search > div {
     display:grid;
     grid-template-columns: 1fr auto;
     align-items: center;
-    gap:32px;
+    column-gap:32px;
     background-color:#fff;
     border-top: 1px solid var(--cobalt-600);
     padding:16px 64px;
 }
 
-#footer-pricing > div {
+#footer-pricing {
     display:flex;
     gap:16px;
 }
 
-#footer-pricing > div > .pricing-details {
-    
-}
-
-#footer-pricing > div > .pricing-details + .pricing-details {
+#footer-pricing > .pricing-details + .pricing-details {
     padding-left:16px;
     border-left: 1px solid var(--gray-500);
 }
 
-#footer-pricing .legal {
-    margin-top:4px;
+#footer-cta {
+    grid-row: span 2;
 }
+
+#footer-legal {
+    grid-column: auto;
+}
+
+
 
 
 
@@ -1217,17 +1252,9 @@ nav#sub-nav .search > div {
 
 
     /* FOOTER */
-    #footer-pricing > div {
-        display:flex;
-        gap:8px;
-    }
 
-    #footer-pricing > div > .pricing-details .price.sm .price-point {
-        
-    }
-    
-    #footer-pricing > div > .pricing-details + .pricing-details {
-        padding-left:8px;
+    #sticky-footer {
+        padding:16px 24px;
     }
 
     /* PRICING */
@@ -1236,8 +1263,13 @@ nav#sub-nav .search > div {
         margin:0
     }
 
-    #sticky-footer {
-        padding:16px 24px;
+    #footer-cta {
+        grid-row: auto;
+    }
+    
+    #footer-legal {
+        grid-column: span 2;
+        margin-top:8px;
     }
 
 
@@ -1253,10 +1285,9 @@ nav#sub-nav .search > div {
     }
 
     .limited {
-        padding-left: 24px;
-        padding-right: 24px;
+        padding-left: 0px;
+        padding-right: 0px;
     }
-
 
 
     /* GRIDS */
