--- a/css/device-carousel.css
+++ b/css/device-carousel.css
@@ -10,33 +10,51 @@
     grid-template-columns: auto 1fr auto;
 }
 
+#device-carousel .device-carousel #device-images {
+    position: relative;
+    height:35vh;
+    overflow-x:scroll;
+    scroll-behavior: smooth;
+    display:flex;
+    transition: 1000ms;
+    pointer-events: none;
+}
+
+#device-carousel .device-carousel #device-images::-webkit-scrollbar {
+    display: none;
+}
+
+#device-carousel.full .device-carousel #device-images {
+    height:65vh;
+}
+
+#device-carousel .device-carousel #device-images > div {
+    height:100%;
+    min-width:100%;
+    display:flex;
+    justify-content: center;
+}
+
+#device-carousel .device-carousel #device-images > div img {
+    height:100%;
+    user-select: none;
+}
+
+/* CONTROLS */
 #device-carousel .device-carousel .page-control {
     width:32px;
     display:flex;
     align-items: center;
 }
 
-#device-carousel .device-carousel .device-images {
-    position: relative;
-    height:35vh;
-    overflow:hidden;
-    transition: 1000ms;
+#device-carousel .device-carousel .page-control svg {
+    fill:var(--gray-800);
+    cursor: pointer;
 }
 
-#device-carousel.full .device-carousel .device-images {
-    height:70vh;
-}
-
-#device-carousel .device-carousel .device-images > div {
-    height:100%;
-    width:100%;
-    position:absolute;
-    display:flex;
-    justify-content: center;
-}
-
-#device-carousel .device-carousel .device-images > div img {
-    height:100%;
+#device-carousel .device-carousel .page-control.inactive svg {
+    fill:var(--gray-300);
+    pointer-events: none;
 }
 
 
@@ -56,6 +74,7 @@
     transition: all 300ms;
     background-color:var(--gray-300);
     border: 1px solid transparent;
+    cursor:pointer
 }
 
 #device-carousel .pagination > div:hover {
@@ -66,6 +85,7 @@
 #device-carousel .pagination > div.active {
     width:64px;
     background-color:var(--gray-500);
+    pointer-events: none;
 }
 
 
