--- a/css/cards.css
+++ b/css/cards.css
@@ -24,6 +24,10 @@
     background-color:var(--blue-000);
 }
 
+.card.disable {
+    pointer-events: none;
+}
+
 .card-container {
     display:flex;
     flex-direction: row;
